--- a/styles/reset.css
+++ b/styles/reset.css
@@ -1,5 +1,4 @@
 /* @import 'modern-normalize/modern-normalize.css'; */
-
 *,
 *::before,
 *::after {
@@ -11,34 +10,65 @@ body {
   height: 100%;
 }
 
-body {
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
   margin: 0;
-}
-
-img,
-svg,
-video,
-canvas {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-
-button,
-input,
-select,
-textarea {
-  font: inherit;
-  color: inherit;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
 }
 
 ul,
 ol {
   margin: 0;
   padding: 0;
+  list-style: none;
+}
+
+ol:last-child,
+ul:last-child {
+  margin-bottom: 0;
+}
+
+a {
+  text-decoration: none;
+  color: currentColor;
+}
+
+input,
+textarea,
+select {
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+  outline: none;
+}
+
+textarea {
+  resize: none;
+}
+
+button {
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+  color: currentColor;
+  border: none;
+
+  display: block;
+  cursor: pointer;
+}
+
+address {
+  font-style: normal;
+}
+
+img,
+picture,
+svg {
+  display: block;
+  max-width: 100%;
 }
