--- a/components/tasks/AddTaskForm/AddTaskForm.module.css
+++ b/components/tasks/AddTaskForm/AddTaskForm.module.css
@@ -64,6 +64,22 @@
     color: var(--color-scheme-text);
 }
 
+.input:focus {
+    border: 2px solid var(--color-scheme-accent);
+}
+
+.error {
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 160%;
+    color: var(--color-red);
+}
+
+.inputError {
+    border: 1px solid var(--color-red) !important;
+}
+
 .saveBtn {
     margin: 0 auto;
 }
