--- a/components/tasks/AddTaskForm/AddTaskForm.module.css
+++ b/components/tasks/AddTaskForm/AddTaskForm.module.css
@@ -1,8 +1,8 @@
 .form {
     border-radius: 40px;
-    padding: 64px;
-    width: 768px;
-    height: 472px;
+    padding: 64px 20px;
+    width: 335px;
+    height: 484px;
     max-width: 768px;
     background-color: var(--color-scheme-background);
     display: flex;
@@ -10,11 +10,57 @@
     margin: 0 auto;
 }
 
+.input {
+    border: 2px solid var(--opacity-transparent);
+    border-radius: 12px;
+    padding: 8px 12px;
+    width: 295px;
+    height: 37px;
+    background-color: var(--opacity-neutral-darkest-5);
+    font-family: var(--font-family);
+    font-size: 16px;
+    line-height: 150%;
+    color: var(--color-scheme-text);
+}
+
+
+
+.input:focus,
+.input:hover {
+    border: 2px solid var(--color-scheme-accent);
+}
+
+@media only screen and (min-width: 768px) {
+    .form {
+        padding: 64px 32px;
+        width: 704px;
+        height: 441px;
+    }
+
+    .input {
+        width: 640px;
+    }
+}
+
+
+@media only screen and (min-width: 1336px) {
+    .form {
+        padding: 64px;
+        width: 768px;
+        height: 472px;
+    }
+
+    .input {
+        height: 40px;
+    }
+}
+
 .fieldset {
     border: none;
     padding: 0;
     margin: 0 0 24px 0;
-    min-width: 0;
+    width: 100%;
+    /* min-width: 0; */
 }
 
 .legend {
@@ -51,22 +97,6 @@
     color: var(--color-scheme-text);
 }
 
-.input {
-    border: 2px solid var(--opacity-transparent);
-    border-radius: 12px;
-    padding: 8px 12px;
-    width: 640px;
-    height: 40px;
-    background-color: var(--opacity-neutral-darkest-5);
-    font-family: var(--font-family);
-    font-size: 16px;
-    line-height: 150%;
-    color: var(--color-scheme-text);
-}
-
-.input:focus {
-    border: 2px solid var(--color-scheme-accent);
-}
 
 .error {
     font-family: var(--font-family);
@@ -77,7 +107,7 @@
 }
 
 .inputError {
-    border: 1px solid var(--color-red) !important;
+    border: 1px solid var(--color-red);
 }
 
 .saveBtn {
