some modal and greeting fixes

--- a/components/common/Button/Button.module.css
+++ b/components/common/Button/Button.module.css
@@ -1,10 +1,11 @@
 .button {
-  --btn-bg: var(--color-scheme-foreground-alt);
-  --btn-bg-hover: var(--color-scheme-foreground-alt);
-  --btn-bg-active: var(--color-scheme-foreground-alt);
+--btn-bg: var(--color-scheme-foreground-alt, #ffdae0);
+--btn-bg-hover: var(--color-scheme-foreground-alt, #fff4f6);
+--btn-bg-active: var(--color-scheme-foreground-alt, #ffdae0);
 
-  --btn-text: var(--color-scheme-text);
-  --btn-border: var(--color-scheme-accent);
+--btn-text: var(--color-scheme-text, #191919);
+--btn-border: var(--color-scheme-accent, #ffcbd3);
+
 
   --btn-disabled-bg: var(--color-neutral-lightest, #f2f2f2);
   --btn-disabled-text: var(--color-neutral, #7f7f7f);
@@ -27,7 +28,7 @@
   justify-content: center;
   gap: 12px;
 
-  height: var(--btn-height);
+  min-height: var(--btn-height);
   padding: var(--btn-padding-y) var(--btn-padding-x);
 
   border: none;
@@ -81,16 +82,12 @@
   cursor: progress;
 }
 
-.button:disabled.loading {
-  cursor: progress;
-}
-
 .cancel,
 .logout {
-  --btn-bg: var(--opacity-neutral-darkest-5);
+  --btn-bg: var(--opacity-neutral-darkest-5, rgba(0,0,0,0.05));
   --btn-bg-hover: var(--opacity-neutral-darkest-10, rgba(0, 0, 0, 0.1));
   --btn-bg-active: var(--opacity-neutral-darkest-10, rgba(0, 0, 0, 0.1));
-  --btn-border: var(--opacity-neutral-darkest-15);
+  --btn-border: var(--opacity-neutral-darkest-15, rgba(0,0,0,0.15));
 }
 
 .delete {
