--- a/components/layout/Sidebar/Sidebar.module.css
+++ b/components/layout/Sidebar/Sidebar.module.css
@@ -46,11 +46,12 @@
 }
 
 .close svg {
-stroke: var(--color-scheme-text);
+  stroke: var(--color-scheme-text);
+  stroke-width: 1px;
 }
 
 .nav {
-  padding: 8px 16px;
+  padding: 0px 16px;
   display: grid;
   gap: 8px;
   align-content: start;
@@ -58,18 +59,21 @@ stroke: var(--color-scheme-text);
 
 .navItem {
   width: 100%;
+  height: 40px;
   display: flex;
   align-items: center;
-  gap: 14px;
+  gap: 12px;
   padding: 8px 8px;
-  border-radius: 14px;
+  border-radius: 8px;
   background: transparent;
   cursor: pointer;
   text-decoration: none;
   text-align: left;
-  font-size: 18px;
-  font-weight: var(--fw-regular);
-  line-height: 1.2;
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 150%;
+  color: var(--color-scheme-text);
   transition: background-color 150ms ease;
 }
 
@@ -77,8 +81,18 @@ stroke: var(--color-scheme-text);
   background: var(--opacity-neutral-darkest-5);
 }
 
+.navItem:active {
+  background: var(--color-scheme-foreground);
+}
+
 .active {
   background: var(--color-scheme-foreground);
+}
+
+.divider {
+  height: 1px;
+  background: var(--color-scheme-border);
+  margin: 0 16px;
 }
 
 .bottom {
@@ -88,22 +102,16 @@ stroke: var(--color-scheme-text);
   padding: 16px;
 }
 
-.divider {
-  height: 1px;
-  background: var(--color-scheme-border);
-  margin: 0 24px; 
-}
-
 @media only screen and (min-width: 1440px) {
   .root {
-    top: 0;
-    z-index: 20;
     width: 312px;
-    height: 100dvh;
     border-right: 1px solid var(--color-scheme-border);
     transform: none;
     transition: none;
-    box-shadow: none;
+  }
+
+  .navItem {
+    font-size: 16px;
   }
 
   .backdrop,
