--- a/components/layout/UserBar/UserBar.module.css
+++ b/components/layout/UserBar/UserBar.module.css
@@ -14,15 +14,19 @@
 }
 
 .name {
+  font-family: var(--font-family);
   font-weight: 500;
   font-size: 12px;
   line-height: 160%;
+  color: var(--color-scheme-text);
 }
 
 .email {
+  font-family: var(--font-family);
   font-weight: 400;
   font-size: 12px;
   line-height: 160%;
+  color: var(--color-scheme-text);
 }
 
 .logoutBtn {
@@ -32,12 +36,6 @@
 }
 
 @media only screen and (min-width: 1440px) {
-
-  .avatar {
-    width: 44px;
-    height: 44px;
-  }
-
   .name {
     font-size: 14px;
   }
