--- a/components/tasks/AddTaskForm/AddTaskForm.module.css
+++ b/components/tasks/AddTaskForm/AddTaskForm.module.css
@@ -1,9 +1,9 @@
 .form {
     border-radius: 40px;
-    padding: 64px 20px;
-    width: 335px;
+    padding: 64px 0px;
+    max-width: 295px;
     height: 484px;
-    max-width: 768px;
+    /* max-width: 768px; */
     background-color: var(--color-scheme-background);
     display: flex;
     flex-direction: column;
@@ -24,16 +24,59 @@
 }
 
 
-
 .input:focus,
 .input:hover {
     border: 2px solid var(--color-scheme-accent);
 }
 
+.fieldset {
+    border: none;
+    padding: 0;
+    margin: 0 0 24px 0;
+    /* width: 100%; */
+    /* min-width: 0; */
+}
+
+.legend {
+    display: block;
+    width: 100%;
+    max-width: 640px;
+    text-align: center;
+    margin-bottom: 24px;
+    padding: 0;
+    font-family: var(--second-family);
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 120%;
+    letter-spacing: 0.01em;
+    text-align: center;
+    color: var(--color-scheme-text);
+}
+
+.addTaskInputSet {
+    width: 295px;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.addTaskInput {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.addTaskInput label {
+    font-family: var(--font-family);
+    font-size: 16px;
+    line-height: 150%;
+    color: var(--color-scheme-text);
+}
+
 @media only screen and (min-width: 768px) {
     .form {
-        padding: 64px 32px;
-        width: 704px;
+        padding: 64px 0px;
+        width: 640px;
         height: 441px;
     }
 
@@ -55,47 +98,6 @@
     }
 }
 
-.fieldset {
-    border: none;
-    padding: 0;
-    margin: 0 0 24px 0;
-    width: 100%;
-    /* min-width: 0; */
-}
-
-.legend {
-    display: block;
-    width: 100%;
-    text-align: center;
-    margin-bottom: 24px;
-    padding: 0;
-    font-family: var(--second-family);
-    font-weight: 700;
-    font-size: 48px;
-    line-height: 120%;
-    letter-spacing: 0.01em;
-    text-align: center;
-    color: var(--color-scheme-text);
-}
-
-.addTaskInputSet {
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
-}
-
-.addTaskInput {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-}
-
-.addTaskInput label {
-    font-family: var(--font-family);
-    font-size: 16px;
-    line-height: 150%;
-    color: var(--color-scheme-text);
-}
 
 
 .error {
