--- a/components/tasks/TasksReminderCard/TasksReminderCard.module.css
+++ b/components/tasks/TasksReminderCard/TasksReminderCard.module.css
@@ -29,7 +29,23 @@
     }
 }
 
+.addTaskBtn {
+    background-color: transparent;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+.addTaskBtnIcon {
+    transition: transform cubic-bezier(0.215, 0.610, 0.355, 1) ease-in-out;
+}
+
+.addTaskBtnIcon:hover,
+.addTaskBtnIcon:focus {
+    transform: scale(1.1);
+}
 
 .taskList {
     display: flex;
