--- a/components/tasks/AddTaskModal/AddTaskModal.module.css
+++ b/components/tasks/AddTaskModal/AddTaskModal.module.css
@@ -1,14 +1,39 @@
-.wrapper {
-  display: flex;
-  justify-content: center;
+.modal {
+  --modal-max-w: 335px;
+
+  --modal-bg: transparent;
+  --modal-padding-y: 0px;
+  --modal-padding-x: 0px;
+  box-shadow: none;
+
+  /* close button */
+  --modal-close-size: 32px;
+  --modal-close-pad: 4px;
+  --modal-close-top: 20px;
+  --modal-close-right: 20px;
+  --modal-overflow: visible;
 }
 
-.modalTask {
-  max-width: 768px;
-  border-radius: 40px;
-  padding: 0;
-  background: transparent;
-  box-shadow: none;
+.wrapper {
+  width: 100%;
+}
+
+/* tablet */
+@media (min-width: 768px) {
+  .modal {
+    --modal-max-w: 704px;
+    --modal-close-top: 32px;
+    --modal-close-right: 32px;
+  }
+}
+
+/* desktop */
+@media (min-width: 1440px) {
+  .modal {
+    --modal-max-w: 768px;
+    --modal-close-top: 25px;
+    --modal-close-right: 32px;
+  }
 }
 
 
