--- a/components/tasks/AddTaskModal/AddTaskModal.module.css
+++ b/components/tasks/AddTaskModal/AddTaskModal.module.css
@@ -4,12 +4,21 @@
 }
 
 .modalTask {
-  max-width: 768px;
+  width: 335px;
   border-radius: 40px;
   padding: 0;
-  background: transparent;
+  /* background: transparent; */
   box-shadow: none;
 }
 
+@media only screen and (min-width: 768px) {
+  .modalTask {
+    width: 704px;
+  }
+}
 
-
+@media only screen and (min-width: 1336px) {
+  .modalTask {
+    width: 768px;
+  }
+}
