--- a/components/common/Button/Button.module.css
+++ b/components/common/Button/Button.module.css
@@ -1,11 +1,10 @@
 .button {
---btn-bg: var(--color-scheme-foreground-alt, #ffdae0);
---btn-bg-hover: var(--color-scheme-foreground-alt, #fff4f6);
---btn-bg-active: var(--color-scheme-foreground-alt, #ffdae0);
+  --btn-bg: var(--color-scheme-foreground-alt, #ffdae0);
+  --btn-bg-hover: var(--color-scheme-foreground, #fff4f6);
+  --btn-bg-active: var(--color-scheme-foreground-alt, #ffdae0);
 
---btn-text: var(--color-scheme-text, #191919);
---btn-border: var(--color-scheme-accent, #ffcbd3);
-
+  --btn-text: var(--color-scheme-text, #191919);
+  --btn-border: var(--color-scheme-accent, #ffcbd3);
 
   --btn-disabled-bg: var(--color-neutral-lightest, #f2f2f2);
   --btn-disabled-text: var(--color-neutral, #7f7f7f);
@@ -14,7 +13,6 @@
   --btn-radius: 100px;
   --btn-border-bottom: 4px;
 
-  /* default size = md (mobile first) */
   --btn-height: 42px;
   --btn-padding-y: 10px;
   --btn-padding-x: 24px;
@@ -82,6 +80,8 @@
   cursor: progress;
 }
 
+/* variants */
+
 .cancel,
 .logout {
   --btn-bg: var(--opacity-neutral-darkest-5, rgba(0,0,0,0.05));
@@ -97,6 +97,8 @@
   --btn-text: #ffffff;
   --btn-border: rgba(0, 0, 0, 0.3);
 }
+
+/* sizes */
 
 .sm {
   --btn-height: 38px;
@@ -153,17 +155,18 @@
 /* tablet */
 @media (min-width: 768px) {
   .md {
-    --btn-height: 44px;
+    --btn-height: 42px;
   }
 }
 
 /* desktop */
 @media (min-width: 1440px) {
   .md {
-    --btn-height: 46px;
-    --btn-font-size: 16px;
+    --btn-height: 42px;
+    --btn-font-size: 14px;
   }
 }
+
 
 
 
