--- a/components/tasks/AddTaskForm/AddTaskForm.module.css
+++ b/components/tasks/AddTaskForm/AddTaskForm.module.css
@@ -1,10 +1,4 @@
 .form {
-    border-radius: 40px;
-    padding: 64px 0px;
-    width: 295px;
-    height: 484px;
-    /* max-width: 768px; */
-    background-color: var(--color-scheme-background);
     display: flex;
     flex-direction: column;
     margin: 0 auto;
@@ -14,7 +8,7 @@
     border: 2px solid var(--opacity-transparent);
     border-radius: 12px;
     padding: 8px 12px;
-    width: 295px;
+    width: 100%;
     height: 37px;
     background-color: var(--opacity-neutral-darkest-5);
     font-family: var(--font-family);
@@ -33,16 +27,13 @@
     border: none;
     padding: 0;
     margin: 0 0 24px 0;
-    /* width: 100%; */
-    /* min-width: 0; */
 }
 
 .legend {
     display: block;
     width: 100%;
-    max-width: 640px;
     text-align: center;
-    margin-bottom: 24px;
+    margin-bottom: 48px;
     padding: 0;
     font-family: var(--second-family);
     font-weight: 700;
@@ -54,7 +45,6 @@
 }
 
 .addTaskInputSet {
-    width: 295px;
     display: flex;
     flex-direction: column;
     gap: 24px;
@@ -73,32 +63,11 @@
     color: var(--color-scheme-text);
 }
 
-@media only screen and (min-width: 768px) {
-    .form {
-        padding: 64px 0px;
-        width: 640px;
-        height: 441px;
-    }
-
-    .input {
-        width: 640px;
-    }
-}
-
-
-@media only screen and (min-width: 1336px) {
-    .form {
-        padding: 64px;
-        width: 768px;
-        height: 472px;
-    }
-
+@media only screen and (min-width: 1440px) {
     .input {
         height: 40px;
     }
 }
-
-
 
 .error {
     font-family: var(--font-family);
