--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,6 +1,11 @@
 .dashboard {
   display: flex;
   flex-direction: column;
+
+  @media only screen and (min-width: 768px) {
+    max-width: 1128px;
+    margin: 0 auto;
+  }
 }
 
 .dashboard__content {
