--- a/components/layout/Breadcrumbs/Breadcrumbs.module.css
+++ b/components/layout/Breadcrumbs/Breadcrumbs.module.css
@@ -7,7 +7,8 @@
 
   @media only screen and (min-width: 1440px) {
     max-width: 1128px;
-    margin: 16 auto;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
