--- a/components/layout/Breadcrumbs/Breadcrumbs.module.css
+++ b/components/layout/Breadcrumbs/Breadcrumbs.module.css
@@ -1,3 +1,9 @@
+.breadcrumbsWrapper {
+  @media only screen and (min-width: 1440px) {
+    margin-left: 300px;
+  }
+}
+
 .breadcrumbs {
   display: flex;
   align-items: center;
