--- a/components/dashboard/StatusBlock/StatusBlock.module.css
+++ b/components/dashboard/StatusBlock/StatusBlock.module.css
@@ -2,6 +2,7 @@
   display: flex;
   gap: 16px;
   margin-top: 20px;
+  width: 100%;
 }
 
 .card {
@@ -41,8 +42,7 @@
 
 @media (min-width: 1440px) {
   .cards {
-    max-width: 642px;
-    gap: 16px;
+    gap: 32px;
     margin-top: 16px;
   }
   .label {
