--- a/components/dashboard/StatusBlock/StatusBlock.module.css
+++ b/components/dashboard/StatusBlock/StatusBlock.module.css
@@ -1,7 +1,6 @@
 .cards {
   display: flex;
   gap: 16px;
-  margin-top: 20px;
   width: 100%;
 }
 
@@ -36,14 +35,13 @@
 @media (min-width: 768px) {
   .cards {
     gap: 32px;
-    margin-top: 16px;
+    /* margin-top: 16px; */
   }
 }
 
 @media (min-width: 1440px) {
   .cards {
     gap: 32px;
-    margin-top: 16px;
   }
   .label {
     font-size: 16px;
