--- a/components/layout/Header/Header.module.css
+++ b/components/layout/Header/Header.module.css
@@ -2,12 +2,12 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 16px 20px;
+  padding: 16px 0;
 }
 
 @media only screen and (min-width: 768px) {
   .header {
-    padding: 16px 20px;
+    padding: 16px 0;
   }
 }
 
