--- a/components/dashboard/StatusBlock/StatusBlock.module.css
+++ b/components/dashboard/StatusBlock/StatusBlock.module.css
@@ -35,13 +35,13 @@
 @media (min-width: 768px) {
   .cards {
     gap: 32px;
-    /* margin-top: 16px; */
   }
 }
 
 @media (min-width: 1440px) {
   .cards {
     gap: 32px;
+    height: 127px;
   }
   .label {
     font-size: 16px;
@@ -49,4 +49,6 @@
   .value {
     font-size: 56px;
   }
+  
+
 }
