--- a/components/journey/BabyJourney/babyJourney.module.css
+++ b/components/journey/BabyJourney/babyJourney.module.css
@@ -1,15 +1,18 @@
 .container_baby {
+  margin-top: 16px;
   border: 0px solid var(--color-scheme-border);
   border-radius: 32px;
-  padding: 24px;
+  padding: 16px 20px 24px;
   width: 335px;
-  height: 983px;
+  background: var(--color-scheme-foreground);
+  /* height: 983px; */
 }
 
 .container_image {
   display: flex;
   flex-direction: column;
   gap: 16px;
+  margin-bottom: 32px;
 }
 
 .image {
@@ -27,15 +30,35 @@
   color: var(--color-scheme-text);
 }
 
+.container_text {
+  width: 287px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  margin-bottom: 16px;
+}
+
 .container_fact {
   border-radius: 12px;
   padding: 12px;
   width: 287px;
-  min-height: 100px;
+  /* min-height: 100px; */
   background: var(--color-scheme-foreground-alt);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 8px;
+  align-items: center;
 }
 
-.svg {
+.container_fact_svg {
+  fill: var(--color-scheme-2-text);
+  width: 24px;
+  height: 24px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .fact_title {
