--- a/components/dashboard/FeelingCheckCard/FeelingCheckCard.module.css
+++ b/components/dashboard/FeelingCheckCard/FeelingCheckCard.module.css
@@ -1,4 +1,3 @@
-
 .card {
   background: var(--color-scheme-foreground);
   border-radius: 24px;
@@ -65,3 +64,8 @@
   }
 }
 
+@media (min-width: 1440px) {
+  .card {
+    height: 210px;
+  }
+}
