--- a/components/dashboard/FeelingCheckCard/FeelingCheckCard.module.css
+++ b/components/dashboard/FeelingCheckCard/FeelingCheckCard.module.css
@@ -1,4 +1,3 @@
-
 .card {
   background: var(--color-scheme-foreground);
   border-radius: 24px;
@@ -10,6 +9,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  overflow: hidden;
 }
 
 .title {
@@ -64,4 +64,40 @@
     --btn-font-size: 14px;
   }
 }
+
+/* desktop */
+@media (min-width: 1440px) {
+  .card {
+    max-width: 390px;
+    height: 210px;
+    justify-content: flex-start;
+  }
+
+  .text {
+    max-height: 72px;
+    overflow: auto;
+
+    padding-right: 6px;
+  }
+
+  .text::-webkit-scrollbar {
+    width: 6px;
+  }
+
+  .text::-webkit-scrollbar-thumb {
+    background: rgba(0, 0, 0, 0.15);
+    border-radius: 999px;
+  }
+
+  .text::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  .btn.btn {
+    width: fit-content;
+    --btn-height: 42px;
+    --btn-font-size: 14px;
+  }
+}
+
 
