--- a/components/journey/BabyJourney/babyJourney.module.css
+++ b/components/journey/BabyJourney/babyJourney.module.css
@@ -3,7 +3,8 @@
   border: 0px solid var(--color-scheme-border);
   border-radius: 32px;
   padding: 16px 20px 24px;
-  width: 335px;
+  max-width: 335px;
+  width: 100%;
   background: var(--color-scheme-foreground);
   /* height: 983px; */
 }
@@ -18,8 +19,10 @@
 .image {
   border: 1px solid var(--color-scheme-border);
   border-radius: 24px;
-  width: 287px;
-  height: 379px;
+  max-width: 287px;
+  width: 100%;
+  max-height: 379px;
+  height: 100%;
 }
 
 .text {
@@ -31,7 +34,8 @@
 }
 
 .container_text {
-  width: 287px;
+  max-width: 287px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 16px;
@@ -41,8 +45,8 @@
 .container_fact {
   border-radius: 12px;
   padding: 12px;
-  width: 287px;
-  /* min-height: 100px; */
+  max-width: 287px;
+  width: 100%;
   background: var(--color-scheme-foreground-alt);
   display: flex;
   flex-direction: row;
@@ -67,4 +71,62 @@
   font-size: 14px;
   line-height: 1.5;
   color: var(--color-scheme-text);
+}
+
+@media (min-width: 768px) {
+  .container_baby {
+    padding: 24px;
+    max-width: 704px;
+  }
+
+  .image {
+    max-width: 656px;
+    max-height: 379px;
+  }
+
+  .container_text {
+    max-width: 656px;
+  }
+
+  .container_fact {
+    max-width: 656px;
+  }
+}
+
+@media (min-width: 1440px) {
+  .container_baby {
+    max-width: 1064px;
+    display: flex;
+    flex-direction: row;
+    gap: 32px;
+  }
+
+  .container_image {
+    margin-bottom: 0;
+  }
+
+  .image {
+    width: 461px;
+    height: 379px;
+  }
+
+  .text {
+    font-size: 16px;
+  }
+
+  .container_wrap {
+    width: 523px;
+  }
+
+  .container_text {
+    max-width: 523px;
+  }
+
+  .container_fact {
+    max-width: 523px;
+  }
+
+  .fact_title {
+    font-size: 16px;
+  }
 }
