--- a/components/layout/Sidebar/Sidebar.module.css
+++ b/components/layout/Sidebar/Sidebar.module.css
@@ -119,7 +119,13 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
-  padding: 16px;
+  padding: 16px 16px 24px;
+}
+
+@media only screen and (min-width: 768px) {
+  .backdrop {
+    background: var(--opacity-neutral-darkest-15);
+  }
 }
 
 @media only screen and (min-width: 1440px) {
